--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/app_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#CDFF00" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="OLED Burn Care - The ultimate Android app to prevent, detect, and fix OLED screen burn-in. Keep your display pristine with Scan, Prevention, and Fix modes."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="OLED, burn-in, screen protection, OLED care, screen burn, Android app, display care"
+    />
+    <meta name="author" content="OLED Burn Care" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.oledburncare.com/" />
+    <meta
+      property="og:title"
+      content="OLED Burn Care - Protect & Fix Your OLED Screen"
+    />
+    <meta
+      property="og:description"
+      content="The ultimate Android app to prevent, detect, and fix OLED screen burn-in. Keep your display pristine."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/app_icon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.oledburncare.com/" />
+    <meta
+      property="twitter:title"
+      content="OLED Burn Care - Protect & Fix Your OLED Screen"
+    />
+    <meta
+      property="twitter:description"
+      content="The ultimate Android app to prevent, detect, and fix OLED screen burn-in."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/app_icon.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/app_icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>OLED Burn Care - Protect & Fix Your OLED Screen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
